[gd_scene format=3 uid="uid://ft47pthg6g4n"]

[ext_resource type="Texture2D" uid="uid://d2h0al4tqjfkr" path="res://assets/custom/code_editor_bg.png" id="1_leo3a"]
[ext_resource type="Script" uid="uid://dq8aa2c716mlf" path="res://script/ui/pass_code_window.gd" id="1_vrsx4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7rlxg"]
texture = ExtResource("1_leo3a")
region_rect = Rect2(5, 6, 70, 66)

[node name="Control" type="Control" unique_id=475704671]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vrsx4")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1547853268]
layout_mode = 0
offset_left = -327.0
offset_top = -161.0
offset_right = 1429.0
offset_bottom = 880.0
color = Color(0, 0, 0, 0.5921569)

[node name="PassCodeWindow" type="Panel" parent="." unique_id=605145176]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -88.0
offset_right = 156.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7rlxg")

[node name="UserNameTextBox" type="TextEdit" parent="PassCodeWindow" unique_id=1903933188]
layout_mode = 0
offset_left = 30.0
offset_top = 68.0
offset_right = 284.0
offset_bottom = 102.0
placeholder_text = "Enter Passcode"

[node name="ConfirmButton" type="Button" parent="PassCodeWindow" unique_id=1033810511]
layout_mode = 0
offset_left = 212.0
offset_top = 110.0
offset_right = 283.0
offset_bottom = 141.0
text = "Confirm"

[node name="CancelButton" type="Button" parent="PassCodeWindow" unique_id=712232105]
layout_mode = 0
offset_left = 136.0
offset_top = 110.0
offset_right = 207.0
offset_bottom = 141.0
text = "Cancel"

[node name="Label" type="Label" parent="PassCodeWindow" unique_id=103552047]
layout_mode = 0
offset_left = 50.0
offset_top = 8.0
offset_right = 251.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "SaveFile is locked"

[connection signal="pressed" from="PassCodeWindow/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="PassCodeWindow/CancelButton" to="." method="_on_cancel_button_pressed"]
